--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/stack": "^7.0.6",
@@ -35,12 +37,14 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-location": "^2.5.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-location": "~18.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
